# COS214_Prac2

./: .gitignore  Boatman.cpp  Boatman.h  BoatmanFactory.cpp  BoatmanFactory.h  CMakeLists.txt  CareTaker.cpp  CareTaker.h  Infantry.cpp  Infantry.h  InfantryFactory.cpp  InfantryFactory.h  Main  Main.cpp  Makefile  Memento.cpp  Memento.h  Prac2.vpp  ShieldBearer.cpp  ShieldBearer.h  ShieldBearerFactory.cpp  ShieldBearerFactory.h  SoldierFactory.cpp  SoldierFactory.h  Soldiers.cpp  Soldiers.h  TestingMain  TestingMain.cpp
